# Goss_Practice

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_file.json
server/: __main__.py  main.py  settings.py
server/api/: webs.py
server/conections/: base.py  webs.py
server/constants/: base.py
server/exceptions/: base.py  webs.py
server/schemas/: base.py  links.py  terms.py  webs.py
